# muscli

./: Cargo.toml  README.md  config.json
src/: dir_select.rs  event.rs  local.rs  lyrics.rs  main  main.rs  pandora.rs  player.rs  spotify.rs  tempCodeRunnerFile.rs  util.rs
src/scripts/: lyrics.py
